<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="25dp" />

        <Button
            android:id="@+id/vicebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:text="@string/vicebtn" />

        <Button
            android:id="@+id/quanbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="11dp"
            android:textSize="15sp"
            android:text="@string/quanbtn" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5" >

        <ImageView
            android:id="@+id/showView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" >

        <EditText
            android:id="@+id/show"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:textSize="8dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="速度：" />

            <EditText
                android:id="@+id/speedText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:text="80" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="码盘：" />

            <EditText
                android:id="@+id/encoderText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:inputType="number"
                android:text="70" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/zfbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/zfbtn" />

            <Button
                android:id="@+id/setbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/setbtn" />

            <ImageButton
                android:id="@+id/upbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/up" />

            <Button
                android:id="@+id/trackbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/trackbtn" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageButton
                android:id="@+id/leftbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/left" />

            <Button
                android:id="@+id/stopbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="停止"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/rightbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/action_layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/otherbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/otherbtn" />

	  			<Button
				    android:id="@+id/armbtn"
				    android:layout_width="0dp"
				    android:layout_height="match_parent"
				    android:layout_weight="0.5"
				    android:enabled="false"
				    android:text="@string/armother" />
 
            <ImageButton
                android:id="@+id/downbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/down" />

            <Button
                android:id="@+id/zigbeebtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zigbeebtn" />
            
        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/infrarebtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/infrared" />

            <Button
                android:id="@+id/buzzerbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buzzer" />

            <Button
                android:id="@+id/lightbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/light" />

            <Button
                android:id="@+id/resultbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/resultbtn" />
            <Button 
                android:id="@+id/nfcbtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="NFC" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>